deployment/dokuwiki/templates/deployment.yaml
---
# Source: dokuwiki/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dokuwiki
  namespace: "default"
  labels:
    app.kubernetes.io/instance: dokuwiki
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: dokuwiki
    app.kubernetes.io/version: 20230404.1.0
    helm.sh/chart: dokuwiki-14.7.2
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: dokuwiki
      app.kubernetes.io/name: dokuwiki
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: dokuwiki
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: dokuwiki
        app.kubernetes.io/version: 20230404.1.0
        helm.sh/chart: dokuwiki-14.7.2
      annotations:
    spec:
      
      automountServiceAccountToken: false
      # yamllint disable rule:indentation
      hostAliases:
        - hostnames:
          - status.localhost
          ip: 127.0.0.1
      # yamllint enable rule:indentation
      serviceAccountName: dokuwiki
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/instance: dokuwiki
                    app.kubernetes.io/name: dokuwiki
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      containers:
        - name: dokuwiki
          image: docker.io/bitnami/dokuwiki:20230404.1.0-debian-12-r23
          imagePullPolicy: "IfNotPresent"
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1001
            seLinuxOptions: null
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          livenessProbe:
            httpGet:
              path: /doku.php
              port: http
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /doku.php
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: dokuwiki-data
              mountPath: /bitnami/dokuwiki
      volumes:
        - name: dokuwiki-data
          persistentVolumeClaim:
            claimName: dokuwiki
